fixed dropdown list alignment

--- a/frontend/post.css
+++ b/frontend/post.css
@@ -398,6 +398,7 @@ body {
   z-index: 2000;
   margin-top: 8px;
   overflow: hidden;
+  text-align: left;
 }
 
 .profile-menu:hover .dropdown,
